--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,7 @@
-v0.0.0-dirty-20220721
+DEPRECATED 2022-06-22
+- Moved to another repo: interpro-what-do-ya-know
+
+v0.0.0-dirty-20220621
 - First pass script
 - Takes in a JSON and a single protein name
 - Prints a JSON for just that single protein that can be visualized here:
